--- a/src/components/Marquee.module.css
+++ b/src/components/Marquee.module.css
@@ -26,13 +26,6 @@
   padding: 0 2rem;
 }
 
-@media (max-width: 767px) {
-  .marqueeContent span {
-    font-size: 2rem;
-    padding: 0 1rem;
-  }
-}
-
 .separator {
   color: var(--color-bg-dark);
   font-size: 2rem !important;
